# MC906-MO416-NAO-2016s1

./: .gitignore  .gitmodules
article/: Relatorio.bib  Relatorio.tex
code/: CMakeLists.txt  Controler.py  Controller.py  Controller2.py  README.md  README.txt  Sonar.py  env_run.sh  execute_project.sh  fuzzySimulation.py  launch_choregraphe_control.sh  main.cpp  main.py  makefile  nao.cpp  nao.h  naovigate.py  naovigate1.py  naovigate2.py  requirements.txt  setup_naoqi.sh
code/NAO-control/: README.md  proximity_sensor.py  single_nao_control.py
deprecated_code/: CMakeLists.txt  README.md  main.cpp  nao.cpp
scenarios/: crazy_corridor.wbt  curva.wbt  paralelos.wbt  paralelos2.wbt  paralelos3.wbt
vrep-project/: vrep-project.ttt
webots-scene/: Nao.proto  Nao_modified.proto  nao.wbt
